syntax = "proto3";

package protos;

// Chord RPCs

message FindSuccessorRequest {
    bytes id = 1;
}

message FindSuccessorReply {
    bytes id = 1;
    string addr = 2;
}

message NotifyRequest {
    bytes id = 1;
    string addr = 2;
}

// DHT Common RPCs

message GetRequest {
    string key = 1;
}

message PutRequest {
}

message DelRequest {
}

message Result {
    string result = 1;
}

// Kad RPCs

message PingRequest {
}

message PingReply {
}

message FindNodeRequest {
}

message FindNodeReply {
}

message FindValueRequest {
}

message FindValueReply {
}

message StoreRequest {
}

message StoreReply {
}

service Chord {
    rpc FindSuccessor (FindSuccessorRequest) returns (FindSuccessorReply) {
    }

    rpc Notify (NotifyRequest) returns (Result) {
    }
}

service Kad {
    rpc Ping (PingRequest) returns (PingReply) {
    }

    rpc FindNode (FindNodeRequest) returns (FindNodeReply) {
    }

    rpc FindValue (FindValueRequest) returns (FindValueReply) {
    }

    rpc Store (StoreRequest) returns (StoreReply) {
    }
}

service DHT {
    rpc Get (GetRequest) returns (Result) {
    }
    rpc Put (PutRequest) returns (Result) {
    }
    rpc Del (DelRequest) returns (Result) {
    }
}
